[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Shark.tscn" type="PackedScene" id=2]
[ext_resource path="res://fx/trails/WaterParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://fx/circle.png" type="Texture" id=4]
[ext_resource path="res://fx/bubble.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/old sounds/dive.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/old sounds/emerge.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/explosion2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/old sounds/harpoon.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/old sounds/scream1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/old sounds/scream2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/old sounds/scream3.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/old sounds/scream6.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/old sounds/scream7.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/old sounds/scream9.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/old sounds/hook_hit_player.wav" type="AudioStream" id=16]


[node name="Player" type="Node2D"]
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
ROT_SPEED = 0.897598
movement_type = 1

[node name="Shark" parent="." instance=ExtResource( 2 )]

[node name="WaterParticles" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 30, 0 )
rotation = 1.5708

[node name="DiveMeter" type="Node2D" parent="."]
position = Vector2( 0, -70 )
scale = Vector2( 0.07, 0.07 )
z_index = 7

[node name="Bar" type="TextureProgress" parent="DiveMeter"]
visible = false
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 256, 256 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 4

[node name="LabelPosition" type="Node2D" parent="."]
position = Vector2( 0, -70 )
z_index = 7

[node name="SFX" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="DiveSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="EmergeSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="HarpoonSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="ScreamSFX1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="ScreamSFX2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="ScreamSFX3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="ScreamSFX4" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )
bus = "SFX"

[node name="ScreamSFX5" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="ScreamSFX6" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 15 )
bus = "SFX"

[node name="OnHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 16 )
volume_db = 10.0

[node name="HookTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="InvencibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUps" type="Node" parent="."]

